tests/NormalTests/paczka1/fuzzy1/27402885.err
Error in line 6: yyDVpxL S47 65,2
Error in line 7: yyDVpxL S580 6,8
Error in line 14: yyDVpxL S694 30,7
Error in line 21: FRgrEl S580 66,3
Error in line 17: yyDVpxL S47 60,8
